# xsmp-test

kde-hello/: CMakeLists.txt  main.cpp
qt-hello/: CMakeLists.txt  TestApp.cpp  main.cpp
qt5-hello/: CMakeLists.txt  TestApp.h  main.cpp
