project (qt-hello)
cmake_minimum_required(VERSION 2.8)
find_package(Qt4 REQUIRED)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set(my_SRCS main.cpp)
include(${QT_USE_FILE})
include(GNUInstallDirs)
add_definitions(${QT_DEFINITIONS})
add_executable(qt-hello ${my_SRCS})
target_link_libraries(qt-hello ${QT_LIBRARIES})
install(TARGETS qt-hello BUNDLE DESTINATION . RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} )
