project (qt5-hello)
cmake_minimum_required(VERSION 2.8.10)
find_package(Qt5Core 5.2 REQUIRED)
find_package(Qt5Gui 5.2 REQUIRED)
find_package(Qt5Widgets 5.2 REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set(my_SRCS main.cpp TestApp.cpp)
include(GNUInstallDirs)
add_definitions(${QT_DEFINITIONS})
add_executable(qt5-hello ${my_SRCS})
qt5_use_modules(qt5-hello Widgets)
target_link_libraries(qt5-hello ${QT_LIBRARIES})
install(TARGETS qt5-hello BUNDLE DESTINATION . RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} )
